# auditsec

./: .env.example  .gitignore  .vercelignore  AI_ANALYSIS_README.md  API_AUDITS_ENDPOINTS.md  API_ERROR_HANDLING.md  API_ME_ROUTE.md  APPSEC_AI_PROMPT.md  DEPLOYMENT_GUIDE.md  EMAILJS_CONFIG_GUIDE.md  ISSUES_AND_MISSING_FEATURES.md  NEXT_STEPS.md  PAYMENT_SYSTEM_README.md  PROGRESS_UPDATE.md  PROJECT_SUMMARY.md  README.md  SUPABASE_MIGRATION_GUIDE.md  TUNNEL_TESTING_GUIDE.md  USER_TEST_ACCOUNT.md  package-lock.json  package.json  render.yaml  supabase-migration.sql  vercel.json
.github/: copilot-instructions.md
backend/: .env.example  .env.supabase  server-simple.js  server.js  test-oauth-config.js
backend/client/: db.js
backend/controllers/: auditController.js
backend/data/: categoryProducts.js  mockProducts.js
backend/db/: index.js  supabase.js
backend/middleware/: adminAuth.js  aiRateLimit.js  auth.js  clientAuth.js  (+2 more)
frontend/: .env.example  DEPLOYMENT_NOTES.md  EMAILJS_SETUP.md  audit-results.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
tools/auditsec-training-simulator/: README.md  pyproject.toml
tools/auditsec-training-simulator/auditsec_training_simulator/: cli.py
tools/auditsec-training-simulator/auditsec_training_simulator/checks/: base.py  cookies.py  cors.py  disclosure.py  registry.py  security_headers.py
tools/auditsec-training-simulator/auditsec_training_simulator/core/: config.py  engine.py  http.py  models.py
tools/auditsec-training-simulator/auditsec_training_simulator/reporting/: markdown.py
(+206 files in other folders)
